// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fuzzy Path Search Arrow controls 1`] = `
"[32m?[39m [32mEnter file:[39m [2m(Use arrow keys or start typing)[22m
  [38;2;36;82;109mfoo-bar.js[39m  [38;2;139;162;165m.[39m
[38;2;0;87;255m▇[39m [38;2;0;87;255mbar-lorem.js[39m  [38;2;0;87;255m.[39m
  [38;2;36;82;109melit-bar.txt[39m  [38;2;139;162;165mlorem[39m
  [38;2;36;82;109mipsum-lorem.js[39m  [38;2;139;162;165murna[39m
  [38;2;36;82;109mamet-bar.js[39m  [38;2;139;162;165murna[39m"
`;

exports[`Fuzzy Path Search Arrow controls 2`] = `
"[32m?[39m [32mEnter file:[39m [2m(Use arrow keys or start typing)[22m
  [38;2;36;82;109mfoo-bar.js[39m  [38;2;139;162;165m.[39m
  [38;2;36;82;109mbar-lorem.js[39m  [38;2;139;162;165m.[39m
[38;2;0;87;255m▇[39m [38;2;0;87;255melit-bar.txt[39m  [38;2;0;87;255mlorem[39m
  [38;2;36;82;109mipsum-lorem.js[39m  [38;2;139;162;165murna[39m
  [38;2;36;82;109mamet-bar.js[39m  [38;2;139;162;165murna[39m"
`;

exports[`Fuzzy Path Search Arrow controls 3`] = `
"[32m?[39m [32mEnter file:[39m [2m(Use arrow keys or start typing)[22m
  [38;2;36;82;109mfoo-bar.js[39m  [38;2;139;162;165m.[39m
  [38;2;36;82;109mbar-lorem.js[39m  [38;2;139;162;165m.[39m
  [38;2;36;82;109melit-bar.txt[39m  [38;2;139;162;165mlorem[39m
[38;2;0;87;255m▇[39m [38;2;0;87;255mipsum-lorem.js[39m  [38;2;0;87;255murna[39m
  [38;2;36;82;109mamet-bar.js[39m  [38;2;139;162;165murna[39m"
`;

exports[`Fuzzy Path Search Arrow controls 4`] = `
"[32m?[39m [32mEnter file:[39m [2m(Use arrow keys or start typing)[22m
  [38;2;36;82;109mfoo-bar.js[39m  [38;2;139;162;165m.[39m
  [38;2;36;82;109mbar-lorem.js[39m  [38;2;139;162;165m.[39m
  [38;2;36;82;109melit-bar.txt[39m  [38;2;139;162;165mlorem[39m
  [38;2;36;82;109mipsum-lorem.js[39m  [38;2;139;162;165murna[39m
[38;2;0;87;255m▇[39m [38;2;0;87;255mamet-bar.js[39m  [38;2;0;87;255murna[39m"
`;

exports[`Fuzzy Path Search Arrow controls 5`] = `
"[32m?[39m [32mEnter file:[39m [2m(Use arrow keys or start typing)[22m
  [38;2;36;82;109mfoo-bar.js[39m  [38;2;139;162;165m.[39m
  [38;2;36;82;109mbar-lorem.js[39m  [38;2;139;162;165m.[39m
  [38;2;36;82;109melit-bar.txt[39m  [38;2;139;162;165mlorem[39m
  [38;2;36;82;109mipsum-lorem.js[39m  [38;2;139;162;165murna[39m
[38;2;0;87;255m▇[39m [38;2;0;87;255mamet-bar.js[39m  [38;2;0;87;255murna[39m"
`;

exports[`Fuzzy Path Search Arrow controls 6`] = `
"[32m?[39m [32mEnter file:[39m [2m(Use arrow keys or start typing)[22m
  [38;2;36;82;109mfoo-bar.js[39m  [38;2;139;162;165m.[39m
  [38;2;36;82;109mbar-lorem.js[39m  [38;2;139;162;165m.[39m
  [38;2;36;82;109melit-bar.txt[39m  [38;2;139;162;165mlorem[39m
[38;2;0;87;255m▇[39m [38;2;0;87;255mipsum-lorem.js[39m  [38;2;0;87;255murna[39m
  [38;2;36;82;109mamet-bar.js[39m  [38;2;139;162;165murna[39m"
`;

exports[`Fuzzy Path Search Arrow controls 7`] = `
"[32m?[39m [32mEnter file:[39m [2m(Use arrow keys or start typing)[22m
  [38;2;36;82;109mfoo-bar.js[39m  [38;2;139;162;165m.[39m
  [38;2;36;82;109mbar-lorem.js[39m  [38;2;139;162;165m.[39m
[38;2;0;87;255m▇[39m [38;2;0;87;255melit-bar.txt[39m  [38;2;0;87;255mlorem[39m
  [38;2;36;82;109mipsum-lorem.js[39m  [38;2;139;162;165murna[39m
  [38;2;36;82;109mamet-bar.js[39m  [38;2;139;162;165murna[39m"
`;

exports[`Fuzzy Path Search Arrow controls 8`] = `
"[32m?[39m [32mEnter file:[39m [2m(Use arrow keys or start typing)[22m
  [38;2;36;82;109mfoo-bar.js[39m  [38;2;139;162;165m.[39m
[38;2;0;87;255m▇[39m [38;2;0;87;255mbar-lorem.js[39m  [38;2;0;87;255m.[39m
  [38;2;36;82;109melit-bar.txt[39m  [38;2;139;162;165mlorem[39m
  [38;2;36;82;109mipsum-lorem.js[39m  [38;2;139;162;165murna[39m
  [38;2;36;82;109mamet-bar.js[39m  [38;2;139;162;165murna[39m"
`;

exports[`Fuzzy Path Search Arrow controls 9`] = `
"[32m?[39m [32mEnter file:[39m [2m(Use arrow keys or start typing)[22m
[38;2;0;87;255m▇[39m [38;2;0;87;255mfoo-bar.js[39m  [38;2;0;87;255m.[39m
  [38;2;36;82;109mbar-lorem.js[39m  [38;2;139;162;165m.[39m
  [38;2;36;82;109melit-bar.txt[39m  [38;2;139;162;165mlorem[39m
  [38;2;36;82;109mipsum-lorem.js[39m  [38;2;139;162;165murna[39m
  [38;2;36;82;109mamet-bar.js[39m  [38;2;139;162;165murna[39m"
`;

exports[`Fuzzy Path Search Arrow controls 10`] = `
"[32m?[39m [32mEnter file:[39m [2m(Use arrow keys or start typing)[22m
[38;2;0;87;255m▇[39m [38;2;0;87;255mfoo-bar.js[39m  [38;2;0;87;255m.[39m
  [38;2;36;82;109mbar-lorem.js[39m  [38;2;139;162;165m.[39m
  [38;2;36;82;109melit-bar.txt[39m  [38;2;139;162;165mlorem[39m
  [38;2;36;82;109mipsum-lorem.js[39m  [38;2;139;162;165murna[39m
  [38;2;36;82;109mamet-bar.js[39m  [38;2;139;162;165murna[39m"
`;

exports[`Fuzzy Path Search Initial render 1`] = `
"[32m?[39m [32mEnter file:[39m [2m(Use arrow keys or start typing)[22m
[38;2;0;87;255m▇[39m [38;2;0;87;255mfoo-bar.js[39m  [38;2;0;87;255m.[39m
  [38;2;36;82;109mbar-lorem.js[39m  [38;2;139;162;165m.[39m
  [38;2;36;82;109melit-bar.txt[39m  [38;2;139;162;165mlorem[39m
  [38;2;36;82;109mipsum-lorem.js[39m  [38;2;139;162;165murna[39m
  [38;2;36;82;109mamet-bar.js[39m  [38;2;139;162;165murna[39m"
`;

exports[`Fuzzy Path Search Search 1`] = `
"[32m?[39m [32mEnter file:[39m bar[7m [27m
[38;2;0;87;255m▇[39m [38;2;0;87;255m[7mbar[27m-lorem.js[39m  [38;2;0;87;255m.[39m
  [38;2;36;82;109mfoo-[7mbar[27m.js[39m  [38;2;139;162;165m.[39m
  [38;2;36;82;109mamet-[7mbar[27m.js[39m  [38;2;139;162;165murna[39m
  [38;2;36;82;109melit-[7mbar[27m.txt[39m  [38;2;139;162;165mlorem[39m
  [38;2;36;82;109mipsum-lorem.js[39m  [38;2;139;162;165murna[39m"
`;

exports[`Fuzzy Path Search Search 2`] = `
"[32m?[39m [32mEnter file:[39m ba[7m [27m
[38;2;0;87;255m▇[39m [38;2;0;87;255m[7mba[27mr-lorem.js[39m  [38;2;0;87;255m.[39m
  [38;2;36;82;109mfoo-[7mba[27mr.js[39m  [38;2;139;162;165m.[39m
  [38;2;36;82;109mamet-[7mba[27mr.js[39m  [38;2;139;162;165murna[39m
  [38;2;36;82;109melit-[7mba[27mr.txt[39m  [38;2;139;162;165mlorem[39m
  [38;2;36;82;109mipsum-lorem.js[39m  [38;2;139;162;165murna[39m"
`;

exports[`Fuzzy Path Search Search 3`] = `
"[32m?[39m [32mEnter file:[39m b[7m [27m
[38;2;0;87;255m▇[39m [38;2;0;87;255m[7mb[27mar-lorem.js[39m  [38;2;0;87;255m.[39m
  [38;2;36;82;109mfoo-[7mb[27mar.js[39m  [38;2;139;162;165m.[39m
  [38;2;36;82;109mamet-[7mb[27mar.js[39m  [38;2;139;162;165murna[39m
  [38;2;36;82;109melit-[7mb[27mar.txt[39m  [38;2;139;162;165mlorem[39m
  [38;2;36;82;109mipsum-lorem.js[39m  [38;2;139;162;165murna[39m"
`;

exports[`Fuzzy Path Search Search 4`] = `
"[32m?[39m [32mEnter file:[39m [2m(Use arrow keys or start typing)[22m
[38;2;0;87;255m▇[39m [38;2;0;87;255mfoo-bar.js[39m  [38;2;0;87;255m.[39m
  [38;2;36;82;109mbar-lorem.js[39m  [38;2;139;162;165m.[39m
  [38;2;36;82;109melit-bar.txt[39m  [38;2;139;162;165mlorem[39m
  [38;2;36;82;109mipsum-lorem.js[39m  [38;2;139;162;165murna[39m
  [38;2;36;82;109mamet-bar.js[39m  [38;2;139;162;165murna[39m"
`;

exports[`Fuzzy Path Search Search 5`] = `
"[32m?[39m [32mEnter file:[39m foo[7m [27m
[38;2;0;87;255m▇[39m [38;2;0;87;255m[7mfoo[27m-bar.js[39m  [38;2;0;87;255m.[39m
  [38;2;36;82;109mbar-lorem.js[39m  [38;2;139;162;165m.[39m
  [38;2;36;82;109mamet-bar.js[39m  [38;2;139;162;165murna[39m
  [38;2;36;82;109melit-bar.txt[39m  [38;2;139;162;165mlorem[39m
  [38;2;36;82;109mipsum-lorem.js[39m  [38;2;139;162;165murna[39m"
`;

exports[`Fuzzy Path Search Search 6`] = `
"[32m?[39m [32mEnter file:[39m fo[7m [27m
[38;2;0;87;255m▇[39m [38;2;0;87;255m[7mfo[27mo-bar.js[39m  [38;2;0;87;255m.[39m
  [38;2;36;82;109mbar-lorem.js[39m  [38;2;139;162;165m.[39m
  [38;2;36;82;109mamet-bar.js[39m  [38;2;139;162;165murna[39m
  [38;2;36;82;109melit-bar.txt[39m  [38;2;139;162;165mlorem[39m
  [38;2;36;82;109mipsum-lorem.js[39m  [38;2;139;162;165murna[39m"
`;

exports[`Fuzzy Path Search Search 7`] = `
"[32m?[39m [32mEnter file:[39m f[7m [27m
[38;2;0;87;255m▇[39m [38;2;0;87;255m[7mf[27moo-bar.js[39m  [38;2;0;87;255m.[39m
  [38;2;36;82;109mbar-lorem.js[39m  [38;2;139;162;165m.[39m
  [38;2;36;82;109mamet-bar.js[39m  [38;2;139;162;165murna[39m
  [38;2;36;82;109melit-bar.txt[39m  [38;2;139;162;165mlorem[39m
  [38;2;36;82;109mipsum-lorem.js[39m  [38;2;139;162;165murna[39m"
`;

exports[`Fuzzy Path Search Search 8`] = `
"[32m?[39m [32mEnter file:[39m [2m(Use arrow keys or start typing)[22m
[38;2;0;87;255m▇[39m [38;2;0;87;255mfoo-bar.js[39m  [38;2;0;87;255m.[39m
  [38;2;36;82;109mbar-lorem.js[39m  [38;2;139;162;165m.[39m
  [38;2;36;82;109melit-bar.txt[39m  [38;2;139;162;165mlorem[39m
  [38;2;36;82;109mipsum-lorem.js[39m  [38;2;139;162;165murna[39m
  [38;2;36;82;109mamet-bar.js[39m  [38;2;139;162;165murna[39m"
`;

exports[`Fuzzy Path Search Search 9`] = `
"[32m?[39m [32mEnter file:[39m lorem[7m [27m
[38;2;0;87;255m▇[39m [38;2;0;87;255mbar-[7mlorem[27m.js[39m  [38;2;0;87;255m.[39m
  [38;2;36;82;109mipsum-[7mlorem[27m.js[39m  [38;2;139;162;165murna[39m
  [38;2;36;82;109melit-bar.txt[39m  [38;2;139;162;165m[7mlorem[27m[39m
  [38;2;36;82;109mfoo-bar.js[39m  [38;2;139;162;165m.[39m
  [38;2;36;82;109mamet-bar.js[39m  [38;2;139;162;165murna[39m"
`;

exports[`Fuzzy Path Search Search 10`] = `
"[32m?[39m [32mEnter file:[39m lorem[7m [27m
  [38;2;36;82;109mbar-[7mlorem[27m.js[39m  [38;2;139;162;165m.[39m
[38;2;0;87;255m▇[39m [38;2;0;87;255mipsum-[7mlorem[27m.js[39m  [38;2;0;87;255murna[39m
  [38;2;36;82;109melit-bar.txt[39m  [38;2;139;162;165m[7mlorem[27m[39m
  [38;2;36;82;109mfoo-bar.js[39m  [38;2;139;162;165m.[39m
  [38;2;36;82;109mamet-bar.js[39m  [38;2;139;162;165murna[39m"
`;
